add brand create, pages, custom components
