# app/Http/Requests/Brand/StoreRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\Brand;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'string',
+            'img' => 'string|nullable',
+            'active' => 'boolean'
+        ];
+    }
+}
