# routes/api.php
@@ -3,6 +3,11 @@
 use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\Auth\CheckUser;
 use App\Http\Controllers\Auth\RegisterController;
+use App\Http\Controllers\Brand\DestroyController;
+use App\Http\Controllers\Brand\IndexController;
+use App\Http\Controllers\Brand\StoreController;
+use App\Http\Controllers\Brand\UpdateController;
+use App\Http\Controllers\Common\UploadController;
 use App\Http\Controllers\User\ShowController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -36,6 +41,7 @@ Route::group([
     Route::post('check-user', CheckUser::class);
 });
 
+Route::post('/common/uploads', UploadController::class);
 
 Route::group(
     [
@@ -44,3 +50,17 @@ Route::group(
     ], function () {
     Route::get('me', ShowController::class);
 });
+
+Route::group(
+    [
+        'middleware' => 'jwt.auth',
+        'prefix' => 'brands'
+    ], function () {
+    Route::get('', IndexController::class);
+    Route::post('', StoreController::class);
+    Route::patch('/{brand}', UpdateController::class);
+    Route::delete('/{brand}', DestroyController::class);
+});
+
+
+
